--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,5 +1,5 @@
-body {
-  background-color: #a05c7b;
+p {
+  color: #a05c7b;
 }
 
 .sneaker-images > img {
